# goxlr-utility-ui

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build-release.yml  build.yml  get-version.yml  release.yml
ci/: build-packages
ci/resources/: goxlr-utility-ui.desktop
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-open.json
src-tauri/src/: ipc.rs  macos.rs  main.rs
