[package]
name = "goxlr-utility-ui"
version = "0.0.2"
description = "GoXLR Utility UI"
authors = ["Craig McLure <craig@mclure.net>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
# Useful GoXLR Stuff..
tokio = { version = "1.35.0", features = ["full"] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
serde = { version = "1.0.193", features = ["derive"] }

# GoXLR Shared Items
goxlr-ipc = { git = "https://github.com/GoXLR-on-Linux/goxlr-utility" }

# Websocket Handling Stuff..
url = "2.5.0"
tungstenite = "0.21.0"

# Used for Install / Remove..
serde_json = "1.0.108"
directories = "5.0.1"

tauri = { version = "2.0.0-alpha"}
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
