[package]
name = "goxlr-utility-ui"
version = "0.0.2"
description = "GoXLR Utility UI"
authors = ["Craig McLure <craig@mclure.net>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
# Useful GoXLR Stuff..
tokio = { version = "1.35.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features= ["bincode", "json"] }
tokio-util = { version = "0.7.10", features= ["codec", "compat"] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
serde = { version = "1.0.193", features = ["derive"] }
futures = "0.3.29"

# GoXLR Shared Items
#goxlr-ipc = { git = "https://github.com/GoXLR-on-Linux/goxlr-utility" }

# Websocket Handling Stuff..
url = "2.5.0"
tungstenite = "0.21.0"

# Used for Install / Remove..
serde_json = "1.0.108"
directories = "5.0.1"

tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.deb]
name = "goxlr-utility-ui"
assets = [
    ["target/release/goxlr-utility-ui", "usr/bin/", "755"],
    ["../ci/resources/goxlr-utility-ui.desktop", "usr/share/applications", "644"],
]
section = "sound"
priority = "optional"
depends = "$auto, goxlr-utility (>= 0.12.0)"
extended-description = """\
A UI Wrapper for the GoXLR Utility
"""
revision = "1"

## cargo generate-rpm support..
[package.metadata.generate-rpm]
name = "goxlr-utility-ui"
assets = [
    { source = "target/release/goxlr-utility-ui", dest = "/usr/bin/goxlr-utility-ui", mode = "0755" },
    { source = "../ci/resources/goxlr-utility-ui.desktop", dest = "/usr/share/applications/goxlr-utility-ui.desktop", mode = "0644" },
]

# Because we build under Ubuntu in CI, generate-rpm is unable to calculate the dependencies required (no access
# to rpm / yum), so we need to disable the auto and specify dependencies manually.
auto-req = "no"

[package.metadata.generate-rpm.requires]
"libgtk-3.so.0" = "*"
"libwebkit2gtk-4.1.so.0" = "*"
"goxlr-utility" = ">= 0.12.0"
